--- a/styles/style1.css
+++ b/styles/style1.css
@@ -1,28 +1,60 @@
 #podnaslovi{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    justify-content: center;
-    padding: 30px;
-    margin: 10px;
-    align-self: center;
-    text-align: center;
-    color: darkslategray;
-    background-color: beige;
+   display: inline-grid;
+   grid-row: span;
+
+}
+.podnasloviKlasa{
+    background-color: purple;
+    color: white;
 }
 #parent{
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: auto auto;
-    padding: 30px;
-    margin: 10px;
-    color: darkslategray;
-    background-color: beige;
+    display: flex;
+    
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    align-content: space-around;
 }
 .child{
-    gap: 10px;
+   background-color: gray;
+   width: 50%;
+   color: white;
+   margin: 30px;
+   padding: 10px;
+}
+body{
+    background-image: url("/slike/background.jpg");
+    background-color: #797676;
+}
+
+
+#naslovna{
+    display: flex;
+    flex-wrap: wrap;
+    height: 100vh; 
+    justify-content: center;
+    flex-direction: row;
+}
+#levo{
+    background-color: cornflowerblue;
+    color: white;
     padding: 30px;
     margin: 10px;
+    flex-basis: 300px;
+    align-self: center;
+    text-align: center;
     border-radius: 10px;
-    border-color: firebrick;
+    order: 1;
+    flex-grow: 1;
+}
+#desno{
+    background-color: cornflowerblue;
+    color: white;
+    padding: 30px;
+    margin: 10px;
+    flex-basis: 300px;
+    align-self: center;
+    text-align: center;
+    border-radius: 10px;
+    order: 2;
+    flex-grow: 1;
 }
