--- a/styles/pocetna.css
+++ b/styles/pocetna.css
@@ -1,6 +1,16 @@
 .parent{
   display: grid;
-  flex-wrap: nowrap;
+}
+.naslov{
+  background-image: url('../slike/pocetna.jpg');
+  background-color: lightslategrey;
+  width: 100%;
+  padding: 10px;
+  margin: 10px;
+  height: 100vh;
+  background-size: cover;
+  justify-content: center;
+  text-align: center;
 }
 .div-1{
   width: 100%;
